--- a/IELTS/语料库听写/错误记录.md
+++ b/IELTS/语料库听写/错误记录.md
@@ -881,51 +881,51 @@
 |similar experiments|
 |single item|
 |**chapter 5.10**|
-|sky dome|
-|slide presentation|
+|sky dome 苍穹|
+|slide presentation 幻灯片演讲|
 |small scale|
 |small scar on his chin|
 |social isolation|
-|sore throat|
+|sore throat 咽喉痛|
 |special audio equipment|
-|special offers|
-|specialist engine design|
+|special offers 特别优惠|
+|specialist engine design 专业发动机设计|
 |specialized course|
-|specialized meseum|
+|specialized museum|
 |specialized sports facilities|
 |species of crocodiles|
-|spiral notebook|
-|spinose plants|
-|standard suite|
+|spiral notebook 活页本|
+|spinose plants 有刺的植物|
+|standard suite 标准间|
 |steak set|
 |steel and wood|
 |stiff neck|
-|still water|
+|still water 死水|
 |stones|
-|strong scent|
-|student hostel|
+|strong scent 很重的味道|
+|student hostel 学生旅店|
 |student representative|
 |study technique|
-|stuffed nose|
-|stuffed toys|
-|stuff of purse|
-|subject access guide|
+|stuffed nose 鼻塞|
+|stuffed toys 毛绒玩具|
+|stuff of purse 钱包的材料|
+|subject access guide 主题索引|
 |sufficient details|
 |supportive atmosphere|
-|suntan block|
-|sun cream|
+|suntan block 防晒|
+|sun cream 防晒霜|
 |survival courses|
-|swimming costume|
+|swimming costume 泳衣|
 |take one's temperature|
 |technical vocabulary|
-|teaching syllabus|
+|teaching syllabus 教学大纲|
 |teachers and faculty|
 |tape recorder|
-|terraced house|
-|terrestrial heat|
-|tertiary education|
-|the poor
-|the Milky Way
+|terraced house 联排屋|
+|terrestrial heat 地热|
+|tertiary education 高等教育|
+|the poor|
+|the Milky Way 银河|
 |**chapter 5.11**|
 |theoretical framework|
 |tiger shark|
